# ponderous

./: .bandit  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  justfile  pyproject.toml  pytest.ini  uv.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: claude_quality_gate.py
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: ci.yml
docs/: prd.md
src/ponderous/: __init__.py  cli.py
src/ponderous/application/services/: __init__.py  collection_service.py  recommendation_service.py
src/ponderous/application/use_cases/: __init__.py  sync_collection.py
src/ponderous/domain/models/: __init__.py  card.py  collection.py  commander.py  deck.py  user.py
src/ponderous/domain/repositories/: __init__.py  card_repository.py  commander_repository.py  deck_repository.py
src/ponderous/infrastructure/database/: __init__.py  connection.py  migrations.py
src/ponderous/infrastructure/database/repositories/: __init__.py  base.py  card_repository_impl.py  collection_repository.py  commander_repository_impl.py  deck_repository_impl.py
src/ponderous/infrastructure/edhrec/: __init__.py  exceptions.py  models.py  scraper.py
src/ponderous/infrastructure/etl/: __init__.py  collection_transformer.py  moxfield_source.py
src/ponderous/infrastructure/importers/: __init__.py  base.py  exceptions.py  moxfield_csv.py
src/ponderous/infrastructure/moxfield/: __init__.py  client.py  exceptions.py  models.py
src/ponderous/presentation/: __init__.py
src/ponderous/presentation/cli/: __init__.py  base.py  main.py
src/ponderous/presentation/cli/commands/: __init__.py  collection.py  config.py  discovery.py  edhrec.py  recommendations.py  testing.py
src/ponderous/presentation/cli/groups/: __init__.py  user.py
src/ponderous/presentation/formatters/: base.py  progress.py  table.py
src/ponderous/presentation/validators/: base.py  collection.py
src/ponderous/shared/: config.py  exceptions.py
tests/: conftest.py
tests/fixtures/csv/: moxfield_edge_cases.csv  moxfield_invalid_bad_data.csv  moxfield_invalid_missing_required.csv  moxfield_valid_complete.csv  moxfield_valid_minimal.csv
tests/integration/: __init__.py  test_moxfield_sync_integration.py
tests/unit/application/use_cases/: test_sync_collection.py
tests/unit/domain/: test_card.py
tests/unit/infrastructure/: test_card_repository.py  test_database.py
tests/unit/infrastructure/etl/: __init__.py  test_moxfield_source.py
tests/unit/infrastructure/importers/: __init__.py  test_moxfield_csv.py
tests/unit/infrastructure/moxfield/: __init__.py  test_client.py  test_models.py
tests/unit/presentation/: test_cli.py
tests/unit/presentation/cli/: base_test.py  conftest.py  test_main.py
tests/unit/presentation/cli/commands/: __init__.py  test_collection.py  test_config.py  test_discovery.py
tests/unit/presentation/cli/formatters/: __init__.py  test_table.py
tests/unit/presentation/cli/helpers/: __init__.py  mocks.py
